additional pages added for portfolio details

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 June 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.kash-if.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.github.com/kash-if-Naeem/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 349 5065141</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Rawalpindi, Pakistan</span></li>
                 </ul>
@@ -204,9 +204,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/slaxy.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/slaxy.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Ecommerce Website"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -214,20 +214,20 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/chore.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/chore.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Game"><i class="bx bx-plus"></i></a>
+                <a href="choreDoorDetails.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/broadway.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/broadway.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web page"><i class="bx bx-plus"></i></a>
+                <a href="broadwayDetails.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -444,7 +444,7 @@
       </div>
       <div class="credits">
       
-        Designed by <a href="./index.html">Kashif Naeem</a>
+        Designed by <a href="https://github.com/kash-if-Naeem/" target="_blank">Kashif Naeem</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
