--- a/broadwayDetails.html
+++ b/broadwayDetails.html
@@ -92,15 +92,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/slaxy.JPG" alt="">
+                  <img src="assets/img/broadway.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/slax2.JPG" alt="">
+                  <img src="assets/img/broadway2.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/slaxy3.JPG" alt="">
+                  <img src="assets/img/broadway3.JPG" alt="">
                 </div>
 
               </div>
@@ -112,16 +112,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Ecommerce Web design</li>
-                <li><strong>Client</strong>: Alexandra</li>
-                <li><strong>Project date</strong>: 01 March, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://slaxy.de/">www.slaxy.de</a></li>
+                <li><strong>Category</strong>: UI/UX Design</li>
+                <li><strong>Client</strong>: Gaper</li>
+                <li><strong>Project date</strong>: 05 October, 2021</li>
+                <li><strong>Project URL</strong>: <a href="#">www.github.com/kash-if-Naeem/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Details</h2>
               <p>
-                The project was designed by using an ecommerce pateform i.e. Shopify. Its UI was designd using HTML, CSS, Bootstrap and liquid. For interactivity JavaScript was used.
+                This static website was designed as a UI design using HTML, CSS and bootstrap.
               </p>
             </div>
           </div>
