--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/broadway.JPG" class="img-fluid" alt="">
+              <img src="assets/img/broadway.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/broadway.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web page"><i class="bx bx-plus"></i></a>
                 <a href="broadwayDetails.html" title="More Details"><i class="bx bx-link"></i></a>
